--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ project(":core") {
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+        compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
 //        compile "com.roundtriangles.games:gdx-artemis:0.4"
         compile fileTree(dir: 'libs', include: ['*.jar'])
     }
